--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,8 +13,7 @@ jobs:
       # настраиваем java
       - uses: actions/setup-java@v3
         with:
-          distribution: 'zulu' # есть несколько компаний, которые поставляют Java;
-                               # zulu - одна из компаний-дистрибьютеров
+          distribution: 'zulu'
           java-version: '17'
       - uses: Xotabu4/selenoid-github-action@v2
       # запускаем тесты
